# pow

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
include/: Makefile.am  Makefile.in  str2pow.h
libpow/: Makefile.am  Makefile.in  str2pow.c
man/: Makefile.am  Makefile.in  pow.1  str2pow.3
man/ja/: Makefile.am  Makefile.in  str2pow.3
msg/: Makefile  Makefile.am  Makefile.in  ja.cat  ja.msg
po/: POTFILES.in  ja.po
pow/: Makefile.am  Makefile.in  pow.c
tests/: Makefile.am  Makefile.in  pow_-1_-1.c  pow_-1_-2.c  pow_-1_-3.c  pow_-1_0.c  pow_-1_0_5.c  pow_-1_1.c  pow_-1_2.c  pow_-1_3.c  pow_-1e200_101.c  pow_-2_-1.c  pow_-2_-2.c  pow_-2_-3.c  pow_-2_0.c  pow_-2_0_5.c  pow_-2_1.c  pow_-2_2.c  pow_-2_3.c  pow_0_0.c  pow_0_0_5.c  pow_0_1.c  pow_0_2.c  pow_0_3.c  pow_1_0.c  pow_1_0_5.c  pow_1_1.c  pow_1_2.c  pow_1_3.c  pow_1e200_1e200.c  pow_2_0.c  pow_2_0_5.c  pow_2_1.c  pow_2_2.c  pow_2_3.c  pow_3_0.c  pow_3_0_5.c  pow_3_1.c  pow_3_2.c  pow_3_3.c
