#
INCLUDES= -I$(top_builddir)/include
AM_CFLAGS= -Wall
LDADD= -L$(top_builddir)/libpow -lpow -lm
TESTS= pow_-1_-1 pow_-1_-2 pow_-1_-3 pow_-1_0_5 pow_-1_0 pow_-1_1 pow_-1_2 pow_-1_3 pow_-2_-1 pow_-2_-2 pow_-2_-3 pow_-2_0_5 pow_-2_0 pow_-2_1 pow_-2_2 pow_-2_3 pow_0_0_5 pow_0_0 pow_0_1 pow_0_2 pow_0_3 pow_1_0_5 pow_1_0 pow_1_1 pow_1_2 pow_1_3 pow_-1e200_101 pow_1e200_1e200 pow_2_0_5 pow_2_0 pow_2_1 pow_2_2 pow_2_3 pow_3_0_5 pow_3_0 pow_3_1 pow_3_2 pow_3_3
check_PROGRAMS= $(TESTS)
